--- a/index.html
+++ b/index.html
@@ -10,26 +10,24 @@
   <div class="game-container">
     <h1>Caça-Níquel</h1>
 
-    <!-- Painel de créditos -->
+    <!-- Painel de Créditos -->
     <div class="credit-panel">
-      <input type="number" id="credits-input" placeholder="Créditos">
+      <input type="number" id="credits-input" placeholder="Créditos" min="1">
       <button id="add-credits-button">Adicionar Créditos</button>
     </div>
 
-    <!-- Painel de slots -->
+    <!-- Máquina de Slots -->
     <div class="slot-machine">
       <div class="slot" id="slot1">🍒</div>
       <div class="slot" id="slot2">🍋</div>
       <div class="slot" id="slot3">🍊</div>
     </div>
 
-    <!-- Botão para girar -->
+    <!-- Botão de Girar -->
     <button id="spin-button">Girar</button>
 
-    <!-- Exibição de resultados -->
+    <!-- Resultado -->
     <div id="result">Resultado</div>
-
-    <!-- Ícone de vitória -->
     <img id="win-icon" class="win-icon" src="win-icon.png" alt="Ícone de vitória" style="display:none;">
   </div>
 
