--- a/index.html
+++ b/index.html
@@ -1,40 +1,50 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Jogo de Caça-Níquel</title>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Jogo de Caça-Níquel</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="game-container">
-    <h1>Caça-Níquel</h1>
+    <div class="game-container">
+        <h1>Caça-Níquel</h1>
+        
+        <!-- Créditos -->
+        <div class="credit-panel">
+            <p><strong>Créditos: <span id="credit-count">100</span></strong></p>
+            <button id="add-credits-button">Adicionar Créditos</button>
+        </div>
 
-    <!-- Painel de Créditos -->
-    <div class="credit-panel">
-      <input type="number" id="credits-input" placeholder="Créditos" min="1">
-      <button id="add-credits-button">Adicionar Créditos</button>
+        <!-- Linhas de Aposta -->
+        <div class="bet-panel">
+            <label for="bet-lines">Escolha as linhas de aposta:</label>
+            <input type="number" id="bet-lines" min="1" max="3" value="1">
+            <p>Aposta por linha: <span id="line-bet">10</span> créditos</p>
+        </div>
+
+        <!-- Máquina de Slots -->
+        <div class="slot-machine">
+            <div class="slot" id="slot1">🍒</div>
+            <div class="slot" id="slot2">🍋</div>
+            <div class="slot" id="slot3">🍊</div>
+        </div>
+
+        <!-- Botão para girar -->
+        <button id="spin-button">Girar</button>
+
+        <!-- Resultado -->
+        <div id="result">Resultado</div>
+
+        <!-- Ícone de Vitória -->
+        <img id="win-icon" class="win-icon" src="win-icon.png" alt="Ícone de vitória" style="display:none;">
+
     </div>
 
-    <!-- Máquina de Slots -->
-    <div class="slot-machine">
-      <div class="slot" id="slot1">🍒</div>
-      <div class="slot" id="slot2">🍋</div>
-      <div class="slot" id="slot3">🍊</div>
-    </div>
+    <!-- Efeitos Sonoros -->
+    <audio id="spin-sound" src="spin-sound.mp3" preload="auto"></audio>
+    <audio id="win-sound" src="win-sound.mp3" preload="auto"></audio>
 
-    <!-- Botão de Girar -->
-    <button id="spin-button">Girar</button>
-
-    <!-- Resultado -->
-    <div id="result">Resultado</div>
-    <img id="win-icon" class="win-icon" src="win-icon.png" alt="Ícone de vitória" style="display:none;">
-  </div>
-
-  <!-- Efeitos Sonoros -->
-  <audio id="spin-sound" src="spin-sound.mp3" preload="auto"></audio>
-  <audio id="win-sound" src="win-sound.mp3" preload="auto"></audio>
-
-  <script src="script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
