--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
     <div class="game-container">
         <h1>Caça-Níquel</h1>
         
+        <!-- Tema do Jogo -->
+        <div class="theme-selector">
+            <label for="theme">Escolha o Tema:</label>
+            <select id="theme">
+                <option value="classic">Clássico</option>
+                <option value="neon">Neon</option>
+                <option value="retro">Retro</option>
+            </select>
+        </div>
+
         <!-- Créditos -->
         <div class="credit-panel">
             <p><strong>Créditos: <span id="credit-count">100</span></strong></p>
