--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Caça-Níquel Moderno</title>
+    <title>Caça-Níquel de Cassino</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="game-container">
-        <h1>Caça-Níquel Moderno</h1>
+        <h1>Caça-Níquel de Cassino</h1>
 
         <!-- Créditos e Painel de Controle -->
         <div class="control-panel">
@@ -31,6 +31,8 @@
             <div class="slot" id="slot1"></div>
             <div class="slot" id="slot2"></div>
             <div class="slot" id="slot3"></div>
+            <div class="slot" id="slot4"></div>
+            <div class="slot" id="slot5"></div>
         </div>
 
         <!-- Resultado e Efeitos -->
