--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="game-container">
         <h1>Caça-Níquel de Cassino</h1>
 
-        <!-- Créditos e Painel de Controle -->
+        <!-- Painel de Créditos e Controles -->
         <div class="control-panel">
             <div class="credit-panel">
                 <p><strong>Créditos: <span id="credit-count">100</span></strong></p>
