--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Caça-Níquel de Cassino</title>
+    <title>Caça-Níquel Cassino</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -17,16 +17,21 @@
                 <button id="add-credits-button">Adicionar Créditos</button>
             </div>
 
+            <!-- Apostas em 3 Colunas -->
             <div class="bet-panel">
-                <label for="bet-lines">Linhas de Aposta:</label>
-                <input type="number" id="bet-lines" min="1" max="5" value="1">
-                <p>Aposta por linha: <span id="line-bet">10</span> créditos</p>
+                <label for="bet-lines">Apostas nas 3 Colunas:</label>
+                <div class="bet-columns">
+                    <input type="number" class="bet-column" id="bet-column-1" min="1" value="10" />
+                    <input type="number" class="bet-column" id="bet-column-2" min="1" value="10" />
+                    <input type="number" class="bet-column" id="bet-column-3" min="1" value="10" />
+                </div>
+                <p>Aposta por coluna: <span id="line-bet">10</span> créditos</p>
             </div>
 
             <button id="spin-button" class="spin-button">Girar</button>
         </div>
 
-        <!-- Máquina de Slots -->
+        <!-- Máquina de Slots (com 5 rolos) -->
         <div class="slot-machine">
             <div class="slot" id="slot1"></div>
             <div class="slot" id="slot2"></div>
